// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`test account group component: userNotesView should render correctly '<UserNotesView />' when content is loaded and has progress. 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <section>
        <div
          class="spinner-backdrop"
        >
          <div
            class="progress-bar-box "
            data-testid="progress-bar-view"
          >
            <span
              class="progress-bar-loader"
              style="height: 50px; width: 50px; border-style: solid; border-width: 4px; border-color: #fff;"
            />
          </div>
        </div>
        <div
          class="bulma-container bulma-is-max-desktop"
        >
          <div
            class="py-6"
          >
            <div
              class="bulma-card "
            >
              <div
                class="bulma-card-content"
              >
                <p
                  class="is-size-4 has-text-grey"
                >
                  User Notes
                </p>
                <hr />
                <div
                  class="py-4"
                >
                  <p
                    class="is-size-6 has-text-grey pb-5"
                  >
                    You can save up to 100000 private notes...
                  </p>
                  <div
                    class="bulma-cell is-flex is-flex-direction-row is-align-items-flex-start is-justify-content-left"
                  >
                    <div
                      class="user-notes-list-box"
                    >
                      <p
                        class="is-size-6 has-text-grey"
                      >
                        Notes:
                      </p>
                      <div
                        class="user-notes-fixed-list"
                      />
                    </div>
                    <div
                      class="user-notes-message-box"
                    >
                      <p
                        class="is-size-6 has-text-grey"
                      >
                        Message:
                      </p>
                      <div
                        class="bulma-field"
                      >
                        <div
                          class="bulma-control  user-notes-text-box"
                        >
                          <textarea
                            class="bulma-textarea   bulma-has-fixed-size"
                            id="note"
                            name="note"
                            required=""
                            rows="16"
                          />
                        </div>
                      </div>
                    </div>
                  </div>
                  <div
                    class="bulma-content pt-4"
                  >
                    <button
                      class="bulma-button bulma-is-danger bulma-is-light bulma-is-fullwidth my-4"
                      disabled=""
                      type="submit"
                    >
                      Remove
                    </button>
                    <button
                      class="bulma-button bulma-is-light bulma-is-fullwidth my-4"
                      type="submit"
                    >
                      Clear
                    </button>
                    <button
                      class="bulma-button bulma-is-light bulma-is-link bulma-is-fullwidth my-4"
                      disabled=""
                      type="submit"
                    >
                      Save
                    </button>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </section>
    </div>
  </body>,
  "container": <div>
    <section>
      <div
        class="spinner-backdrop"
      >
        <div
          class="progress-bar-box "
          data-testid="progress-bar-view"
        >
          <span
            class="progress-bar-loader"
            style="height: 50px; width: 50px; border-style: solid; border-width: 4px; border-color: #fff;"
          />
        </div>
      </div>
      <div
        class="bulma-container bulma-is-max-desktop"
      >
        <div
          class="py-6"
        >
          <div
            class="bulma-card "
          >
            <div
              class="bulma-card-content"
            >
              <p
                class="is-size-4 has-text-grey"
              >
                User Notes
              </p>
              <hr />
              <div
                class="py-4"
              >
                <p
                  class="is-size-6 has-text-grey pb-5"
                >
                  You can save up to 100000 private notes...
                </p>
                <div
                  class="bulma-cell is-flex is-flex-direction-row is-align-items-flex-start is-justify-content-left"
                >
                  <div
                    class="user-notes-list-box"
                  >
                    <p
                      class="is-size-6 has-text-grey"
                    >
                      Notes:
                    </p>
                    <div
                      class="user-notes-fixed-list"
                    />
                  </div>
                  <div
                    class="user-notes-message-box"
                  >
                    <p
                      class="is-size-6 has-text-grey"
                    >
                      Message:
                    </p>
                    <div
                      class="bulma-field"
                    >
                      <div
                        class="bulma-control  user-notes-text-box"
                      >
                        <textarea
                          class="bulma-textarea   bulma-has-fixed-size"
                          id="note"
                          name="note"
                          required=""
                          rows="16"
                        />
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  class="bulma-content pt-4"
                >
                  <button
                    class="bulma-button bulma-is-danger bulma-is-light bulma-is-fullwidth my-4"
                    disabled=""
                    type="submit"
                  >
                    Remove
                  </button>
                  <button
                    class="bulma-button bulma-is-light bulma-is-fullwidth my-4"
                    type="submit"
                  >
                    Clear
                  </button>
                  <button
                    class="bulma-button bulma-is-light bulma-is-link bulma-is-fullwidth my-4"
                    disabled=""
                    type="submit"
                  >
                    Save
                  </button>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </section>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`test account group component: userNotesView should render correctly '<UserNotesView />' when content is loaded. 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <section>
        <div
          class="bulma-container bulma-is-max-desktop"
        >
          <div
            class="py-6"
          >
            <div
              class="bulma-card "
            >
              <div
                class="bulma-card-content"
              >
                <p
                  class="is-size-4 has-text-grey"
                >
                  User Notes
                </p>
                <hr />
                <div
                  class="py-4"
                >
                  <p
                    class="is-size-6 has-text-grey pb-5"
                  >
                    You can save up to 100000 private notes...
                  </p>
                  <div
                    class="bulma-cell is-flex is-flex-direction-row is-align-items-flex-start is-justify-content-left"
                  >
                    <div
                      class="user-notes-list-box"
                    >
                      <p
                        class="is-size-6 has-text-grey"
                      >
                        Notes:
                      </p>
                      <div
                        class="user-notes-fixed-list"
                      />
                    </div>
                    <div
                      class="user-notes-message-box"
                    >
                      <p
                        class="is-size-6 has-text-grey"
                      >
                        Message:
                      </p>
                      <div
                        class="bulma-field"
                      >
                        <div
                          class="bulma-control  user-notes-text-box"
                        >
                          <textarea
                            class="bulma-textarea   bulma-has-fixed-size"
                            id="note"
                            name="note"
                            required=""
                            rows="16"
                          />
                        </div>
                      </div>
                    </div>
                  </div>
                  <div
                    class="bulma-content pt-4"
                  >
                    <button
                      class="bulma-button bulma-is-danger bulma-is-light bulma-is-fullwidth my-4"
                      disabled=""
                      type="submit"
                    >
                      Remove
                    </button>
                    <button
                      class="bulma-button bulma-is-light bulma-is-fullwidth my-4"
                      type="submit"
                    >
                      Clear
                    </button>
                    <button
                      class="bulma-button bulma-is-light bulma-is-link bulma-is-fullwidth my-4"
                      disabled=""
                      type="submit"
                    >
                      Save
                    </button>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </section>
    </div>
  </body>,
  "container": <div>
    <section>
      <div
        class="bulma-container bulma-is-max-desktop"
      >
        <div
          class="py-6"
        >
          <div
            class="bulma-card "
          >
            <div
              class="bulma-card-content"
            >
              <p
                class="is-size-4 has-text-grey"
              >
                User Notes
              </p>
              <hr />
              <div
                class="py-4"
              >
                <p
                  class="is-size-6 has-text-grey pb-5"
                >
                  You can save up to 100000 private notes...
                </p>
                <div
                  class="bulma-cell is-flex is-flex-direction-row is-align-items-flex-start is-justify-content-left"
                >
                  <div
                    class="user-notes-list-box"
                  >
                    <p
                      class="is-size-6 has-text-grey"
                    >
                      Notes:
                    </p>
                    <div
                      class="user-notes-fixed-list"
                    />
                  </div>
                  <div
                    class="user-notes-message-box"
                  >
                    <p
                      class="is-size-6 has-text-grey"
                    >
                      Message:
                    </p>
                    <div
                      class="bulma-field"
                    >
                      <div
                        class="bulma-control  user-notes-text-box"
                      >
                        <textarea
                          class="bulma-textarea   bulma-has-fixed-size"
                          id="note"
                          name="note"
                          required=""
                          rows="16"
                        />
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  class="bulma-content pt-4"
                >
                  <button
                    class="bulma-button bulma-is-danger bulma-is-light bulma-is-fullwidth my-4"
                    disabled=""
                    type="submit"
                  >
                    Remove
                  </button>
                  <button
                    class="bulma-button bulma-is-light bulma-is-fullwidth my-4"
                    type="submit"
                  >
                    Clear
                  </button>
                  <button
                    class="bulma-button bulma-is-light bulma-is-link bulma-is-fullwidth my-4"
                    disabled=""
                    type="submit"
                  >
                    Save
                  </button>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </section>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`test account group component: userNotesView should render correctly '<UserNotesView />' when content is loading. 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <section>
        <div
          class="bulma-container bulma-is-max-desktop"
        >
          <div
            class="py-6"
          >
            <div
              class="bulma-card "
            >
              <div
                class="bulma-card-content"
              >
                <div
                  class="base  skeleton-text my-2 "
                  style="height: 14px;"
                />
                <hr />
                <div
                  class="py-4"
                >
                  <div
                    class="base  skeleton-text my-2 "
                    style="height: 14px;"
                  />
                  <div
                    class="bulma-cell is-flex is-flex-direction-row is-align-items-flex-start is-justify-content-left"
                  >
                    <div
                      class="base  skeleton-rect my-2 "
                      style="height: 300px;"
                    />
                  </div>
                  <div
                    class="bulma-content pt-4"
                  >
                    <div
                      class="base  skeleton-rect my-2 "
                    />
                    <div
                      class="base  skeleton-rect my-2 "
                    />
                    <div
                      class="base  skeleton-rect my-2 "
                    />
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </section>
    </div>
  </body>,
  "container": <div>
    <section>
      <div
        class="bulma-container bulma-is-max-desktop"
      >
        <div
          class="py-6"
        >
          <div
            class="bulma-card "
          >
            <div
              class="bulma-card-content"
            >
              <div
                class="base  skeleton-text my-2 "
                style="height: 14px;"
              />
              <hr />
              <div
                class="py-4"
              >
                <div
                  class="base  skeleton-text my-2 "
                  style="height: 14px;"
                />
                <div
                  class="bulma-cell is-flex is-flex-direction-row is-align-items-flex-start is-justify-content-left"
                >
                  <div
                    class="base  skeleton-rect my-2 "
                    style="height: 300px;"
                  />
                </div>
                <div
                  class="bulma-content pt-4"
                >
                  <div
                    class="base  skeleton-rect my-2 "
                  />
                  <div
                    class="base  skeleton-rect my-2 "
                  />
                  <div
                    class="base  skeleton-rect my-2 "
                  />
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </section>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
